@@ -99,6 +99,9 @@ Library
   appropriately when it is being used via socket.makefile() objects
   rather than delaying the close by waiting for garbage collection to do it.
 
+- Issue #4998: Decimal no longer subclasses from or is registered to
+  numbers.Real.
+
 - Issue #4867: Fixed a crash in ctypes when passing a string to a
   function without defining argtypes.
 
